--- a/docs/layouts/partials/logo.html
+++ b/docs/layouts/partials/logo.html
@@ -1,44 +1,9 @@
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 248.41455096542586 140.93957147528022" width="248.41455096542586" height="140.93957147528022">
-    <defs>
-      <style>
-        @font-face {
-          font-family: "Virgil";
-          src: url("https://excalidraw.com/Virgil.woff2");
-        }
-        @font-face {
-          font-family: "Cascadia";
-          src: url("https://excalidraw.com/Cascadia.woff2");
-        }
-      </style>
-    </defs>
-    <g stroke-linecap="round">
-        <g transform="translate(60.14900593874063 69.43305975125668) rotate(0 -0.18802162859549298 23.014171445832176)">
-            <path d="M-1.17 1 C-1.17 8.65, 0.48 38.38, 0.79 45.55 M0.42 0.47 C0.26 7.84, 0.28 36.51, 0.26 43.95" stroke="#c92a2a" stroke-width="1" fill="none"/>
-        </g>
+<svg width="200" height="75" xmlns="http://www.w3.org/2000/svg">
+    <g id="Layer_1">
+        <line stroke-width="3" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_1" y2="24.05737" x2="34.75411" y1="68.31966" x1="6.88526" stroke="#FABA6F" fill="none"/>
+        <line transform="rotate(-18, 50.9836, 37.5)" stroke-width="3" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_2" y2="55.23151" x2="64.12165" y1="19.76847" x1="37.84559" stroke="#396849" fill="none"/>
+        <line transform="rotate(-3, 82.7869, 27.5)" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_4" y2="5.36884" x2="99.67214" y1="49.63114" x1="65.90165" stroke-width="3" stroke="#CE7975" fill="none"/>
+        <text font-style="normal" font-weight="normal" transform="matrix(1.14997, 0, 0, 1.21291, -20.1486, 2.05406)" xml:space="preserve" text-anchor="start" font-family="'Poppins'" font-size="20" id="svg_5" y="30" x="110" stroke-width="0" stroke="#CE7975" fill="#000000">Suivi</text>
+        <text font-style="normal" font-weight="normal" transform="matrix(1.14997, 0, 0, 1.21291, -20.1486, 2.05406)" xml:space="preserve" text-anchor="start" font-family="'Poppins'" font-size="20" id="svg_6" y="50" x="110" stroke-width="0" stroke="#CE7975" fill="#000000">Bourse</text>
     </g>
-    <g stroke-linecap="round">
-        <g transform="translate(40.56680150858665 23.39947134942031) rotate(0 -0.18473716927223904 36.56002940448059)">
-            <path d="M-1.02 -0.09 C-0.98 12.23, 0.02 61.95, 0.04 74.3 M0.65 -1.18 C0.62 10.8, -0.02 60.52, -0.4 72.74" stroke="#c92a2a" stroke-width="1" fill="none"/>
-        </g>
-    </g>
-    <g stroke-linecap="round">
-        <g transform="translate(17.288406591336752 21.38317663465932) rotate(0 0 54.77819742031045)">
-            <path d="M0 0 C0 18.26, 0 91.3, 0 109.56 M0 0 C0 18.26, 0 91.3, 0 109.56" stroke="#2b8a3e" stroke-width="1" fill="none"/>
-        </g>
-    </g>
-    <g stroke-linecap="round" transform="translate(31.618141082172087 36.346976905573456) rotate(0 7.749110854580522 22.712911125494543)">
-        <path d="M1.57 1 L16.22 1.36 L16.27 45.75 L1.21 45.69" stroke="none" stroke-width="0" fill="#fa5252"/>
-        <path d="M1.02 1.39 C2.7 0.89, 6.93 -1.27, 16.69 1.09 M-0.69 -0.58 C3.43 0.27, 7.07 -0.55, 15.64 0.13 M15.69 -1.47 C16.57 17.55, 16.52 35.23, 14.65 46.81 M15.89 -0.23 C14.41 12.95, 14.98 25.62, 15.8 46.15 M16.48 46.24 C9.16 44.85, 5.17 44.49, -1.28 44.4 M15.2 46.2 C9.99 44.9, 4.98 45.24, 0.74 44.88 M-0.84 43.68 C1.09 30.18, 0.64 16.7, 1.17 -1.61 M-0.22 45.22 C0.71 32.16, 1.01 20.34, 0.37 0.69" stroke="#c92a2a" stroke-width="1" fill="none"/>
-    </g>
-    <g stroke-linecap="round" transform="translate(10 36.07976618645034) rotate(0 7.481900135457067 43.82255793624836)">
-        <path d="M-1.06 -1.58 L15.21 1 L16.28 87.14 L-0.19 87.51" stroke="none" stroke-width="0" fill="#40c057"/>
-        <path d="M-1.08 -1.01 C5.08 -0.01, 7.8 -1.38, 14.82 0.78 M-0.46 -0.4 C3.16 0.25, 6.9 -0.04, 15.69 -0.23 M13.29 -0.49 C14.19 28.38, 17.7 58.52, 13.05 86 M15.65 -0.06 C13.5 29.96, 14.07 58.7, 14.11 87.66 M15.07 88.2 C10.6 88.09, 6.65 87.22, 1.42 88.27 M14.87 87.36 C9.18 87.24, 2.87 87.93, 0.17 87.3 M1.02 89.14 C1.53 59.91, -0.99 26.88, -0.31 -1.43 M-0.07 87.98 C0.81 53.08, 0.46 18.94, -0.5 -0.4" stroke="#2b8a3e" stroke-width="1" fill="none"/>
-    </g>
-    <g stroke-linecap="round" transform="translate(54.87605923071192 82.46172000948786) rotate(0 6.145846539839681 4.008160786852045)">
-        <path d="M-0.65 0.01 L10.36 -1.53 L12.58 6.86 L-0.92 9.16" stroke="none" stroke-width="0" fill="#fa5252"/>
-        <path d="M1.22 -0.2 C2.84 0.19, 6.73 0.9, 11.73 1.05 M-0.23 0.35 C4.85 -0.08, 9.16 0.21, 12.2 0.43 M12.74 0.22 C12.93 2.58, 11.84 5.07, 12.98 8.03 M12.58 -0.11 C11.99 2.21, 12.18 3.78, 12.13 7.63 M12.56 7.5 C6.71 6.73, 2.09 8.22, -0.74 8.63 M12.67 8.47 C8.36 7.77, 5.11 7.91, 0.4 8.31 M0.72 7.76 C-0.49 4.9, 0.62 2, -0.75 -0.75 M-0.39 8.24 C-0.34 5.44, 0.22 2.64, 0.3 -0.32" stroke="#c92a2a" stroke-width="1" fill="none"/>
-    </g><g transform="translate(80.82435725517075 10) rotate(0 78.79509685512755 59.33365727042735)">
-        <text x="0" y="41.33365727042733" font-family="Virgil, Segoe UI Emoji" font-size="46.702119142767174px" fill="#000000" text-anchor="start" style="white-space: pre;" direction="ltr">Suivi</text>
-        <text x="0" y="100.66731454085466" font-family="Virgil, Segoe UI Emoji" font-size="46.702119142767174px" fill="#000000" text-anchor="start" style="white-space: pre;" direction="ltr">Bourse</text>
-    </g>
-</svg>
+</svg>   
